--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
     "version": "4.0.0-alpha",
     "description": "Solidity Util Contracts",
     "scripts": {
-        "build": "hardhat compile && tsc",
-        "clean": "rimraf artifacts && rimraf cache && rimraf deployments/localhost && rimraf src/types/* && rimraf dist/deploy",
+        "build": "run-s compile export",
+        "clean:ignored": "rimraf artifacts cache coverage deployments/localhost dist generated-src src/types/*",
+        "clean:hardhat": "hardhat clean",
+        "clean": "run-s clean:hardhat clean:ignored",
+        "codegen": "run-p codegen:protoc",
+        "codegen:protoc": "proto-loader-gen-types --grpcLib @grpc/grpc-js --outDir src/proto grpc-interfaces/stateserver.proto",
+        "compile": "hardhat compile",
         "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" dist/src",
         "deploy": "run-s deploy:development",
         "deploy:bsc_testnet": "hardhat deploy --network bsc_testnet --export export/abi/bsc_testnet.json",
@@ -17,16 +22,16 @@
         "deploy:rinkeby": "hardhat deploy --network rinkeby --export export/abi/rinkeby.json",
         "deploy:ropsten": "hardhat deploy --network ropsten --export export/abi/ropsten.json",
         "deploy:testnet": "run-s deploy:rinkeby deploy:ropsten deploy:kovan deploy:goerli deploy:matic_testnet deploy:bsc_testnet deploy:avax_testnet",
-        "export": "hardhat export-artifacts export/artifacts",
+        "export": "hardhat export-artifacts export/artifacts --hide-sources --including-empty-bytecode --including-no-public-functions",
         "info": "npm-scripts-info",
-        "prebuild": "grpc_tools_node_protoc --plugin=protoc-gen-ts=node_modules/.bin/protoc-gen-ts --ts_out=grpc_js:src/proto --js_out=import_style=commonjs,binary:src/proto --grpc_out=grpc_js:src/proto -I grpc-interfaces grpc-interfaces/stateserver.proto",
-        "prepack": "run-s clean prepare",
-        "prepare": "run-s build copy-dts export",
+        "prebuild": "run-s codegen",
+        "prepack": "run-s build tsc copy-dts",
         "prettier": "prettier --check src/**/*.ts test/**/*.ts contracts/**/*.sol",
         "solhint": "solhint contracts/**/*.sol",
         "start": "hardhat node",
         "test": "hardhat test",
-        "test:coverage": "hardhat coverage"
+        "test:coverage": "hardhat coverage",
+        "tsc": "tsc"
     },
     "scripts-info": {
         "build": "Build contracts and typescript code",
@@ -51,38 +56,37 @@
         "test:coverage": "Run test coverage report"
     },
     "devDependencies": {
-        "@grpc/grpc-js": "^1.3.7",
-        "@nomiclabs/hardhat-ethers": "^2.0.2",
-        "@nomiclabs/hardhat-etherscan": "^2.1.6",
-        "@nomiclabs/hardhat-waffle": "^2.0.1",
-        "@typechain/ethers-v5": "^7.0.1",
-        "@typechain/hardhat": "^2.3.0",
-        "@types/chai": "^4.2.21",
-        "@types/google-protobuf": "^3.15.5",
+        "@grpc/grpc-js": "^1.6.7",
+        "@grpc/proto-loader": "^0.6.13",
+        "@nomiclabs/hardhat-ethers": "^2.1.0",
+        "@nomiclabs/hardhat-etherscan": "^3.1.0",
+        "@nomiclabs/hardhat-waffle": "^2.0.3",
+        "@typechain/ethers-v5": "^10.1.0",
+        "@typechain/hardhat": "^6.1.2",
+        "@types/chai": "^4.3.1",
+        "@types/google-protobuf": "^3.15.6",
         "@types/keccak": "^3.0.1",
-        "@types/mocha": "^9.0.0",
-        "@types/node": "^16.7.10",
-        "chai": "^4.3.4",
+        "@types/mocha": "^9.1.1",
+        "@types/node": "^18.0.3",
+        "chai": "^4.3.6",
         "copyfiles": "^2.4.1",
         "decimal.js": "^10.3.1",
-        "ethereum-waffle": "^3.4.0",
-        "ethers": "^5.4.6",
-        "grpc-tools": "^1.11.2",
-        "grpc_tools_node_protoc_ts": "^5.3.2",
-        "hardhat": "^2.6.2",
-        "hardhat-deploy": "0.9.0",
+        "ethereum-waffle": "^3.4.4",
+        "ethers": "^5.6.9",
+        "hardhat": "^2.10.0",
+        "hardhat-deploy": "0.11.11",
         "npm-run-all": "^4.1.5",
         "npm-scripts-info": "^0.3.9",
-        "prettier": "^2.3.2",
-        "prettier-plugin-solidity": "^1.0.0-beta.17",
+        "prettier": "^2.7.1",
+        "prettier-plugin-solidity": "^1.0.0-dev.22",
         "rimraf": "^3.0.2",
-        "solhint": "^3.3.6",
+        "solhint": "^3.3.7",
         "solhint-plugin-prettier": "^0.0.5",
-        "solidity-coverage": "^0.7.17",
+        "solidity-coverage": "^0.7.21",
         "ts-generator": "^0.1.1",
-        "ts-node": "^10.2.1",
-        "typechain": "^5.1.2",
-        "typescript": "^4.4.2"
+        "ts-node": "^10.8.2",
+        "typechain": "^8.1.0",
+        "typescript": "^4.7.4"
     },
     "repository": {
         "type": "git",
