--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
         "deploy:bsc_testnet": "hardhat deploy --network bsc_testnet --export export/abi/bsc_testnet.json",
         "deploy:development": "hardhat deploy --network localhost",
         "deploy:goerli": "hardhat deploy --network goerli --export export/abi/goerli.json",
-        "deploy:kovan": "hardhat deploy --network kovan --export export/abi/kovan.json",
         "deploy:mainnet": "hardhat deploy --network mainnet --export export/abi/mainnet.json",
         "deploy:matic_testnet": "hardhat deploy --network matic_testnet --export export/abi/matic_testnet.json",
         "deploy:avax_testnet": "hardhat deploy --network avax_testnet --export export/abi/avax_testnet.json",
         "deploy:rinkeby": "hardhat deploy --network rinkeby --export export/abi/rinkeby.json",
         "deploy:ropsten": "hardhat deploy --network ropsten --export export/abi/ropsten.json",
-        "deploy:testnet": "run-s deploy:rinkeby deploy:ropsten deploy:kovan deploy:goerli deploy:matic_testnet deploy:bsc_testnet deploy:avax_testnet",
+        "deploy:testnet": "run-s deploy:rinkeby deploy:ropsten deploy:goerli deploy:matic_testnet deploy:bsc_testnet deploy:avax_testnet",
         "export": "hardhat export-artifacts export/artifacts --hide-sources --including-empty-bytecode --including-no-public-functions",
         "info": "npm-scripts-info",
         "prebuild": "run-s codegen",
@@ -41,7 +40,6 @@
         "deploy:bsc_testnet": "Deploy contracts to bsc_testnet. Requires one environment variable: MNEMONIC.",
         "deploy:development": "Deploy contracts to local node. Requires node running on localhost:8545",
         "deploy:goerli": "Deploy contracts to goerli. Requires two environment variables: PROJECT_ID and MNEMONIC.",
-        "deploy:kovan": "Deploy contracts to kovan. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:mainnet": "Deploy contracts to mainnet.",
         "deploy:matic_testnet": "Deploy contracts to matic_testnet. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:avax_testnet": "Deploy contracts to avax_testnet. Requires one environment variable: MNEMONIC.",
