--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
         "deploy:development": "hardhat deploy --network localhost",
         "deploy:goerli": "hardhat deploy --network goerli --export export/abi/goerli.json",
         "deploy:mainnet": "hardhat deploy --network mainnet --export export/abi/mainnet.json",
-        "deploy:matic_testnet": "hardhat deploy --network matic_testnet --export export/abi/matic_testnet.json",
+        "deploy:polygon_mumbai": "hardhat deploy --network polygon_mumbai --export export/abi/polygon_mumbai.json",
         "deploy:avax_testnet": "hardhat deploy --network avax_testnet --export export/abi/avax_testnet.json",
-        "deploy:testnet": "run-s deploy:goerli deploy:matic_testnet deploy:bsc_testnet deploy:avax_testnet",
+        "deploy:testnet": "run-s deploy:goerli deploy:polygon_mumbai deploy:bsc_testnet deploy:avax_testnet",
         "export": "hardhat export-artifacts export/artifacts --hide-sources --including-empty-bytecode --including-no-public-functions",
         "info": "npm-scripts-info",
         "prebuild": "run-s codegen",
@@ -39,7 +39,7 @@
         "deploy:development": "Deploy contracts to local node. Requires node running on localhost:8545",
         "deploy:goerli": "Deploy contracts to goerli. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:mainnet": "Deploy contracts to mainnet.",
-        "deploy:matic_testnet": "Deploy contracts to matic_testnet. Requires two environment variables: PROJECT_ID and MNEMONIC.",
+        "deploy:polygon_mumbai": "Deploy contracts to polygon_mumbai. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:avax_testnet": "Deploy contracts to avax_testnet. Requires one environment variable: MNEMONIC.",
         "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "export": "Export artifacts in a simpler format",
