--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "deploy:optimism_goerli": "hardhat deploy --network optimism_goerli --export export/abi/optimism_goerli.json",
         "deploy:avax_testnet": "hardhat deploy --network avax_testnet --export export/abi/avax_testnet.json",
         "deploy:iotex_testnet": "hardhat deploy --network iotex_testnet --export export/abi/iotex_testnet.json",
-        "deploy:testnet": "run-s deploy:goerli deploy:polygon_mumbai deploy:arbitrum_goerli deploy:optimism_goerli deploy:bsc_testnet deploy:avax_testnet",
+        "deploy:gnosis_chiado": "hardhat deploy --network gnosis_chiado --export export/abi/gnosis_chiado.json",
+        "deploy:testnet": "run-s deploy:goerli deploy:polygon_mumbai deploy:arbitrum_goerli deploy:optimism_goerli deploy:bsc_testnet deploy:avax_testnet deploy:iotex_testnet deploy:gnosis_chiado",
         "export": "hardhat export-artifacts export/artifacts --hide-sources --including-empty-bytecode --including-no-public-functions",
         "info": "npm-scripts-info",
         "prebuild": "run-s codegen",
