--- a/package.json
+++ b/package.json
@@ -65,30 +65,31 @@
         "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
         "@nomiclabs/hardhat-ethers": "^2.1.1",
         "@nomiclabs/hardhat-etherscan": "^3.1.0",
-        "@typechain/ethers-v5": "^10.1.0",
-        "@typechain/hardhat": "^6.1.2",
+        "@typechain/ethers-v5": "^10.1.1",
+        "@typechain/hardhat": "^6.1.4",
         "@types/chai": "^4.3.3",
         "@types/google-protobuf": "^3.15.6",
         "@types/keccak": "^3.0.1",
-        "@types/mocha": "^9.1.1",
+        "@types/mocha": "^10.0.0",
         "@types/node": "^18.7.14",
         "chai": "^4.3.6",
         "copyfiles": "^2.4.1",
         "decimal.js": "^10.4.0",
         "ethers": "^5.7.0",
-        "hardhat": "^2.10.2",
-        "hardhat-deploy": "0.11.12",
+        "hardhat": "^2.12.2",
+        "hardhat-deploy": "0.11.20",
+        "mocha": "^10.1.0",
         "npm-run-all": "^4.1.5",
         "npm-scripts-info": "^0.3.9",
         "prettier": "^2.7.1",
-        "prettier-plugin-solidity": "^1.0.0-dev.23",
+        "prettier-plugin-solidity": "^1.0.0-rc.1",
         "rimraf": "^3.0.2",
         "solhint": "^3.3.7",
         "solhint-plugin-prettier": "^0.0.5",
-        "solidity-coverage": "^0.7.21",
+        "solidity-coverage": "^0.8.2",
         "ts-generator": "^0.1.1",
         "ts-node": "^10.9.1",
-        "typechain": "^8.1.0",
+        "typechain": "^8.1.1",
         "typescript": "^4.8.2"
     },
     "repository": {
