--- a/package.json
+++ b/package.json
@@ -60,29 +60,29 @@
         "@openzeppelin/contracts": "3.2.1-solc-0.7"
     },
     "devDependencies": {
-        "@grpc/grpc-js": "^1.6.12",
-        "@grpc/proto-loader": "^0.7.2",
-        "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
+        "@grpc/grpc-js": "^1.8.1",
+        "@grpc/proto-loader": "^0.7.4",
+        "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
         "@nomiclabs/hardhat-ethers": "^2.1.1",
-        "@nomiclabs/hardhat-etherscan": "^3.1.0",
-        "@typechain/ethers-v5": "^10.1.1",
-        "@typechain/hardhat": "^6.1.4",
+        "@nomiclabs/hardhat-etherscan": "^3.1.4",
+        "@typechain/ethers-v5": "^10.2.0",
+        "@typechain/hardhat": "^6.1.5",
         "@types/chai": "^4.3.3",
         "@types/google-protobuf": "^3.15.6",
         "@types/keccak": "^3.0.1",
-        "@types/mocha": "^10.0.0",
-        "@types/node": "^18.7.14",
+        "@types/mocha": "^10.0.1",
+        "@types/node": "^18.11.18",
         "chai": "^4.3.6",
         "copyfiles": "^2.4.1",
-        "decimal.js": "^10.4.0",
+        "decimal.js": "^10.4.3",
         "ethers": "^5.7.0",
-        "hardhat": "^2.12.2",
-        "hardhat-deploy": "0.11.20",
-        "mocha": "^10.1.0",
+        "hardhat": "^2.12.5",
+        "hardhat-deploy": "0.11.22",
+        "mocha": "^10.2.0",
         "npm-run-all": "^4.1.5",
         "npm-scripts-info": "^0.3.9",
-        "prettier": "^2.7.1",
-        "prettier-plugin-solidity": "^1.0.0-rc.1",
+        "prettier": "^2.8.1",
+        "prettier-plugin-solidity": "^1.1.1",
         "rimraf": "^3.0.2",
         "solhint": "^3.3.7",
         "solhint-plugin-prettier": "^0.0.5",
@@ -90,7 +90,7 @@
         "ts-generator": "^0.1.1",
         "ts-node": "^10.9.1",
         "typechain": "^8.1.1",
-        "typescript": "^4.8.2"
+        "typescript": "^4.9.4"
     },
     "repository": {
         "type": "git",
