--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
         "deploy:polygon_mumbai": "hardhat deploy --network polygon_mumbai --export export/abi/polygon_mumbai.json",
         "deploy:arbitrum_goerli": "hardhat deploy --network arbitrum_goerli --export export/abi/arbitrum_goerli.json",
         "deploy:optimism_goerli": "hardhat deploy --network optimism_goerli --export export/abi/optimism_goerli.json",
-        "deploy:avax_testnet": "hardhat deploy --network avax_testnet --export export/abi/avax_testnet.json",
+        "deploy:avalanche_fuji": "hardhat deploy --network avalanche_fuji --export export/abi/avalanche_fuji.json",
         "deploy:iotex_testnet": "hardhat deploy --network iotex_testnet --export export/abi/iotex_testnet.json",
         "deploy:chiado": "hardhat deploy --network chiado --export export/abi/chiado.json",
-        "deploy:testnet": "run-s deploy:goerli deploy:polygon_mumbai deploy:arbitrum_goerli deploy:optimism_goerli deploy:bsc_testnet deploy:avax_testnet deploy:iotex_testnet deploy:chiado",
+        "deploy:testnet": "run-s deploy:goerli deploy:polygon_mumbai deploy:arbitrum_goerli deploy:optimism_goerli deploy:bsc_testnet deploy:avalanche_fuji deploy:iotex_testnet deploy:chiado",
         "export": "hardhat export-artifacts export/artifacts --hide-sources --including-empty-bytecode --including-no-public-functions",
         "info": "npm-scripts-info",
         "prebuild": "run-s codegen",
@@ -46,7 +46,7 @@
         "deploy:polygon_mumbai": "Deploy contracts to polygon_mumbai. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:arbitrum_goerli": "Deploy contracts to arbitrum_goerli. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "deploy:optimism_goerli": "Deploy contracts to optimism_goerli. Requires two environment variables: PROJECT_ID and MNEMONIC.",
-        "deploy:avax_testnet": "Deploy contracts to avax_testnet. Requires one environment variable: MNEMONIC.",
+        "deploy:avalanche_fuji": "Deploy contracts to avalanche_fuji. Requires one environment variable: MNEMONIC.",
         "deploy:iotex_testnet": "Deploy contracts to iotex_testnet. Requires one environment variable: MNEMONIC.",
         "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
         "export": "Export artifacts in a simpler format",
