--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -10,17 +10,24 @@
         "compile": "hardhat compile",
         "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" dist/src",
         "deploy": "run-s deploy:development",
-        "deploy:bsc_testnet": "hardhat deploy --network bsc_testnet --export export/abi/bsc_testnet.json",
-        "deploy:development": "hardhat deploy --network localhost",
-        "deploy:goerli": "hardhat deploy --network goerli --export export/abi/goerli.json",
-        "deploy:sepolia": "hardhat deploy --network sepolia --export export/abi/sepolia.json",
-        "deploy:mainnet": "hardhat deploy --network mainnet --export export/abi/mainnet.json",
-        "deploy:polygon_mumbai": "hardhat deploy --network polygon_mumbai --export export/abi/polygon_mumbai.json",
+        "deploy:arbitrum": "hardhat deploy --network arbitrum --export export/abi/arbitrum.json",
         "deploy:arbitrum_goerli": "hardhat deploy --network arbitrum_goerli --export export/abi/arbitrum_goerli.json",
-        "deploy:optimism_goerli": "hardhat deploy --network optimism_goerli --export export/abi/optimism_goerli.json",
+        "deploy:avalanche": "hardhat deploy --network avalanche --export export/abi/avalanche.json",
         "deploy:avalanche_fuji": "hardhat deploy --network avalanche_fuji --export export/abi/avalanche_fuji.json",
-        "deploy:iotex_testnet": "hardhat deploy --network iotex_testnet --export export/abi/iotex_testnet.json",
+        "deploy:bsc": "hardhat deploy --network bsc --export export/abi/bsc.json",
+        "deploy:bsc_testnet": "hardhat deploy --network bsc_testnet --export export/abi/bsc_testnet.json",
         "deploy:chiado": "hardhat deploy --network chiado --export export/abi/chiado.json",
+        "deploy:development": "hardhat deploy --network localhost",
+        "deploy:gnosis": "hardhat deploy --network gnosis --export export/abi/gnosis.json",
+        "deploy:goerli": "hardhat deploy --network goerli --export export/abi/goerli.json",
+        "deploy:iotex": "hardhat deploy --network iotex --export export/abi/iotex.json",
+        "deploy:iotex_testnet": "hardhat deploy --network iotex_testnet --export export/abi/iotex_testnet.json",
+        "deploy:mainnet": "hardhat deploy --network mainnet --export export/abi/mainnet.json",
+        "deploy:optimism": "hardhat deploy --network optimism --export export/abi/optimism.json",
+        "deploy:optimism_goerli": "hardhat deploy --network optimism_goerli --export export/abi/optimism_goerli.json",
+        "deploy:polygon": "hardhat deploy --network polygon --export export/abi/polygon.json",
+        "deploy:polygon_mumbai": "hardhat deploy --network polygon_mumbai --export export/abi/polygon_mumbai.json",
+        "deploy:sepolia": "hardhat deploy --network sepolia --export export/abi/sepolia.json",
         "deploy:testnet": "run-s deploy:goerli deploy:sepolia deploy:polygon_mumbai deploy:arbitrum_goerli deploy:optimism_goerli deploy:bsc_testnet deploy:avalanche_fuji deploy:iotex_testnet deploy:chiado",
         "export": "hardhat export-artifacts export/artifacts --hide-sources --including-empty-bytecode --including-no-public-functions",
         "info": "npm-scripts-info",
@@ -37,17 +44,25 @@
         "copy-dts": "Copy TypeChain type definition files to typescript output dir",
         "clean": "Clean build artifacts, including contracts local deployment information",
         "deploy": "Deploy contracts to local node. Requires node running on localhost:8545",
-        "deploy:bsc_testnet": "Deploy contracts to bsc_testnet. Requires one environment variable: MNEMONIC.",
+        "deploy:arbitrum": "Deploy contracts to arbitrum. Requires environment variable MNEMONIC.",
+        "deploy:arbitrum_goerli": "Deploy contracts to arbitrum_goerli. Requires environment variable MNEMONIC.",
+        "deploy:avalanche": "Deploy contracts to avalanche. Requires environment variable MNEMONIC.",
+        "deploy:avalanche_fuji": "Deploy contracts to avalanche_fuji. Requires environment variable MNEMONIC.",
+        "deploy:bsc": "Deploy contracts to bsc. Requires environment variable MNEMONIC.",
+        "deploy:bsc_testnet": "Deploy contracts to bsc_testnet. Requires environment variable MNEMONIC.",
+        "deploy:chiado": "Deploy contracts to chiado. Requires environment variable MNEMONIC.",
         "deploy:development": "Deploy contracts to local node. Requires node running on localhost:8545",
-        "deploy:goerli": "Deploy contracts to goerli. Requires two environment variables: PROJECT_ID and MNEMONIC.",
-        "deploy:sepolia": "Deploy contracts to sepolia. Requires two environment variables: PROJECT_ID and MNEMONIC.",
-        "deploy:mainnet": "Deploy contracts to mainnet.",
-        "deploy:polygon_mumbai": "Deploy contracts to polygon_mumbai. Requires two environment variables: PROJECT_ID and MNEMONIC.",
-        "deploy:arbitrum_goerli": "Deploy contracts to arbitrum_goerli. Requires two environment variables: PROJECT_ID and MNEMONIC.",
-        "deploy:optimism_goerli": "Deploy contracts to optimism_goerli. Requires two environment variables: PROJECT_ID and MNEMONIC.",
-        "deploy:avalanche_fuji": "Deploy contracts to avalanche_fuji. Requires one environment variable: MNEMONIC.",
-        "deploy:iotex_testnet": "Deploy contracts to iotex_testnet. Requires one environment variable: MNEMONIC.",
-        "deploy:testnet": "Deploy contracts to all supported testnets. Requires two environment variables: PROJECT_ID and MNEMONIC.",
+        "deploy:gnosis": "Deploy contracts to gnosis. Requires environment variable MNEMONIC.",
+        "deploy:goerli": "Deploy contracts to goerli. Requires environment variable MNEMONIC.",
+        "deploy:iotex": "Deploy contracts to iotex. Requires environment variable MNEMONIC.",
+        "deploy:iotex_testnet": "Deploy contracts to iotex_testnet. Requires environment variable MNEMONIC.",
+        "deploy:mainnet": "Deploy contracts to mainnet. Requires environment variable MNEMONIC.",
+        "deploy:optimism": "Deploy contracts to optimism. Requires environment variable MNEMONIC.",
+        "deploy:optimism_goerli": "Deploy contracts to optimism_goerli. Requires environment variable MNEMONIC.",
+        "deploy:polygon": "Deploy contracts to polygon. Requires environment variable MNEMONIC.",
+        "deploy:polygon_mumbai": "Deploy contracts to polygon_mumbai. Requires environment variable MNEMONIC.",
+        "deploy:sepolia": "Deploy contracts to sepolia. Requires environment variable MNEMONIC.",
+        "deploy:testnet": "Deploy contracts to all supported testnets. Requires environment variable MNEMONIC.",
         "export": "Export artifacts in a simpler format",
         "info": "Displays information about the scripts.",
         "prettier": "Check code style",
