--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -79,6 +79,7 @@
         "@nomicfoundation/hardhat-chai-matchers": "^2",
         "@nomicfoundation/hardhat-ethers": "^3",
         "@nomicfoundation/hardhat-verify": "^1",
+        "@safe-global/safe-singleton-factory": "^1",
         "@typechain/ethers-v6": "^0.4",
         "@typechain/hardhat": "^8",
         "@types/chai": "^4",
