--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -86,6 +86,7 @@
         "@types/keccak": "^3",
         "@types/mocha": "^10",
         "@types/node": "^20",
+        "@wagmi/chains": "^1",
         "chai": "^4",
         "copyfiles": "^2",
         "decimal.js": "^10",
